sass/_styles.scss
@use 'variables';
@use 'mixins';
@use 'functions';
@use 'animations';

html,
body {
  margin: 0;
  padding: 0;
  color: white;
  cursor: variables.$cursor-inverse-default;
  font-size: 18px;
  font-family: variables.$font-secondary;
  line-height: 1.6;
  color: #FFFCE1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background-color: black;
}

main {
  flex: 1;
}

* {
  box-sizing: border-box;
}

p,
li {
  cursor: variables.$cursor-text;
}

a {
  text-decoration: none;
  color: inherit;

  @media (hover: hover) and (pointer: fine) {
    cursor: variables.$cursor-pointer;
  }
}

img {
  max-width: 100%;
}

button {
  outline: none;
  background: transparent;
}

// .z-n1 {
//   z-index: -1;
// }

// .z-0 {
//   z-index: 0;
// }

// .z-1 {
//   z-index: 1;
// }

// .z-2 {
//   z-index: 2;
// }

// .z-3 {
//   z-index: 3;
// }

// .z-4 {
//   z-index: 4;
// }

// .z-5 {
//   z-index: 5;
// }

// .z-6 {
//   z-index: 6;
// }

// .z-7 {
//   z-index: 7;
// }

// .z-8 {
//   z-index: 8;
// }

// .z-9 {
//   z-index: 9;
// }

// .p-relative {
//   position: relative;
// }

.canvas-bg {
  position: fixed;
  width: 100vw;
  height: 100vh;
  display: block;
  top: 0;
  left: 0;
  cursor: variables.$cursor-inverse-grab;
  contain: strict;
  z-index: 2;

  @include mixins.max-width(lg) {
    pointer-events: none;
  }
}

.page-header {
  position: absolute;
  top: 0;
  width: 100%;
}

.canvas-game {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  contain: strict;
  pointer-events: none;
  z-index: 3;
}

.game-controls {
  position: absolute;
  bottom: 15px;
  right: 15px;
  z-index: 4;
}

.game-controls__grid {
  display: grid;
  gap: 6px;

  @include mixins.min-width(lg) {
    grid-template-columns: repeat(3, auto);
    grid-template-rows: repeat(3, auto);
  }
}

.game-controls__key {
  color: rgba(255, 255, 255, .5);
  border: 1px dotted rgba(255, 255, 255, .5);
  border-radius: 3px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 38px;
  height: 38px;
  font-weight: 600;
  font-size: 16px;
  text-transform: uppercase;
  background-color: black;
}

.game-controls__key--active {
  background-color: variables.$color-green;
  border: 1px solid variables.$color-green;
  color: black;
}

.game-controls__key--w {
  grid-column: 2;
  grid-row: 1;
}

.game-controls__key--a {
  grid-column: 1;
  grid-row: 2;
}

.game-controls__key--s {
  grid-column: 2;
  grid-row: 2;
}

.game-controls__key--d {
  grid-column: 3;
  grid-row: 2;
}

.game-controls__key--space {
  height: 30px;
  grid-column: span 3;
  grid-row: 3;
  text-transform: uppercase;
  width: 100%;
}

.hero {
  height: 100vh;
  display: flex;
  align-items: center;
  position: relative;
}

.hero__header {
  text-align: center;
  position: relative;
  z-index: auto;

  @include mixins.max-width(sm) {
    text-align: left;
    margin-top: -50px;
  }
}

.hero__name {
  text-transform: uppercase;
  line-height: 0;
  margin-bottom: 60px;
  color: variables.$color-green;
}

.hero .zm-reveal-char {
  font-size: 180px;
  
  @include mixins.max-width(lg) {
    font-size: 163px;
  }

  @include mixins.max-width(md) {
    font-size: 130px;
  }

  @include mixins.max-width(sm) {
    font-size: clamp(100px, 27vw + 1rem, 160px);
  }
}

.hero__headshot {
  width: 120px;
  border: 3px solid black;
  border-radius: 50%;
  background-color: black;
  display: none;
}

.hero__job-title {
  font-size: 35px;
  color: variables.$color-green;
  position: relative;
  display: inline-block;
  line-height: 1;
  margin-left: -5px;
  margin-bottom: 0;
  z-index: 3;
  will-change: transform;
  transform: translate3d(0,0,0);

  @include mixins.max-width(sm) {
    font-size: 26px;
    margin-left: 0;
  }
}

.hero__socials {
  margin-top: 80px;
  display: none;
}

.hero__social-list {
  list-style-type: none;
  display: flex;
  gap: 22px;
  justify-content: center;
}

.hero__social-button {
  width: 60px;
  height: 60px;
}

.hero__social-icon {
  width: 25px;
  display: block;
  position: relative;
}

.hero__social-icon path {
  fill: variables.$color-off-white;
}

.work__grid {
  overflow-anchor: none;
}

.work__row {
  display: flex;
  gap: 40px;
  margin-bottom: 40px;
  flex-direction: column;

  @include mixins.min-width(lg) {
    gap: 15px;
    margin-bottom: 20px;
    flex-direction: row;
  }

  @include mixins.min-width(xxl) {
    gap: 15px;
    margin-bottom: 20px;
  }

  &:hover .work-box {
    flex-grow: 0;
    flex-basis: 550px;
  }

  &:hover .work-box:hover {
    flex-grow: 1;
    flex-basis: calc(100% - 550px - 15px);
  }
}

.work-box {
  flex: 1;
  flex-basis: calc(50% - 15px);
  // min-width: 550px;
  border-radius: 10px;
  position: relative;
  transition: flex-basis 0.3s ease-in-out, transform 0.4s ease-in-out;
  cursor: variables.$cursor-pointer;
  z-index: 3;
}

.work-box:hover .work-info__title,
.work-box:hover .work-info__item {
  color: variables.$color-green;
}

.work-box__link {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  z-index: 3;
}

.work-box__carousel {
  width: 100%;
  height: 550px;
  overflow: hidden;
  position: relative;
  border-radius: 10px;
  background-color: black;
  outline: 1px solid #a4a4a4;
  cursor: variables.$cursor-pointer;

  @include mixins.max-width(sm) {
    height: 450px;
  }
}

.work-box__track {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  will-change: transform;
  transform: translate3d(0, 0, 0);
  display: flex;
  flex-direction: column;
  backface-visibility: hidden;
  contain: content;
}

.work-box__slide {
  transition: filter .4s ease-in-out;
  transform: translate3d(0, 0, 0);
  will-change: transform, opacity;
  backface-visibility: hidden;
  background-attachment: fixed;
  image-rendering: -webkit-optimize-contrast;

  @include mixins.min-width(lg) {
    filter: grayscale(100%);
  }
}

.work-box:hover .work-box__slide {
  filter: grayscale(0);
}

.work-box--g2-sell .work-box__slide {
  background-image: url('/dist/img/screenshot-g2-sell.jpg');
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  aspect-ratio: 1100 / 5835;
  width: 100%;
}

.work-box--rmr .work-box__slide {
  background-image: url('/dist/img/screenshot-rmr.jpg');
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  aspect-ratio: 1100 / 3603;
  width: 100%;
}

.work-box--rrfc .work-box__slide {
  background-image: url('/dist/img/screenshot-rrfc.jpg');
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  aspect-ratio: 1100 / 8194;
  width: 100%;
}

.work-box--g2-reach .work-box__slide {
  background-image: url('/dist/img/screenshot-g2-reach.jpg');
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  aspect-ratio: 1100 / 5988;
  width: 100%;
}

.work-info {
  width: calc(100% - 10px);
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;

  @include mixins.max-width(sm) {
    margin-top: 20px;
  }
}

.work-info__content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: 20px;

  @include mixins.max-width(sm) {
    flex-direction: column;
    align-items: flex-start;
    gap: 5px;
  }
}

.work-info__title {
  font-size: 18px;
  margin-bottom: 0;
  color: rgba(255, 255, 255, .5);
  font-family: variables.$font-secondary;
  font-weight: 400;
  transition: color .2s ease-in-out;
  line-height: 1.1;

  @include mixins.max-width(sm) {
    order: 2;
    color: variables.$color-green;
    margin-top: 10px;
  }
}

.work-info__list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
  margin-top: 0;
  font-weight: 500;
}

.work-info__item {
  font-size: 16px;
  color: rgba(255, 255, 255, .5);
  text-transform: uppercase;
  position: relative;
  line-height: 1.1;
  transition: color .2s ease-in-out;
}

.work-info__item::after {
  content: "|";
  position: absolute;
  right: -8px;
}

.work-info__item:last-child::after {
  content: none;
}

